--- a/MvcWebApp/appsettings.json
+++ b/MvcWebApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "AzureConnectionStrings": {
-    "StorageConStr": "AccountName=...."
+    "StorageConStr": "***REMOVED***"
   },
   "Logging": {
     "LogLevel": {
