Local Table Storage'a ekleme yapıldıktan sonra Azure Cloud Storage'a ekleme yapıldı. Yani sadece localde değil cloud'da da ekleme yapıldı

--- a/MvcWebApp/appsettings.json
+++ b/MvcWebApp/appsettings.json
@@ -1,6 +1,10 @@
 {
   "AzureConnectionStrings": {
-    "StorageConStr": "***REMOVED***"
+    //Local  Storage Primary Connection String Adresi
+    "StorageConStr": "***REMOVED***",
+    //Azure cloud  Storage Primary Connection String Adresi
+    "StorageCloudStr": "***REMOVED***"
+
   },
   "Logging": {
     "LogLevel": {
