--- a/MvcWebApp/appsettings.json
+++ b/MvcWebApp/appsettings.json
@@ -1,5 +1,6 @@
 {
   "AzureConnectionStrings": {
+    //Ýlk Baþta ekleme iþlemlerini Local’de yaparsam daha iyi olur çünkü deneme iþlemlerinde sürekli azure cloud storage kullanýrsam fiyat sürekli artar.
     //Local  Storage Primary Connection String Adresi
     "StorageConStr": "***REMOVED***",
     //Azure cloud  Storage Primary Connection String Adresi
