Update işlemleri index sayfasında yapılması için gerekli kodlar yazıldı. ETag eş zaamanlılık problemini denedim.
product.ETag = "*";
Diğer clinetlar güncelleme yaparken güncelleme yapılmış fakat işlenmemiş nesneyi ezebilir.

--- a/MvcWebApp/appsettings.json
+++ b/MvcWebApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "AzureConnectionStrings": {
-    //Ýlk Baþta ekleme iþlemlerini Local’de yaparsam daha iyi olur çünkü deneme iþlemlerinde sürekli azure cloud storage kullanýrsam fiyat sürekli artar.
+    //Ýlk Baþta ekleme,silme, güncelleme vs. iþlemlerini Local’de yaparsam daha iyi olur çünkü deneme iþlemlerinde sürekli azure cloud storage kullanýrsam fiyat sürekli artar.
     //Local  Storage Primary Connection String Adresi
     "StorageConStr": "***REMOVED***",
     //Azure cloud  Storage Primary Connection String Adresi
